@@ -57,3 +57,25 @@
  have to work late all week re-writing our FastTemplate site :)"
 
 			-- Robert V. Zwink
+
+
+"Hello, sorry for my english, i'm french ...
+
+I've just discovered SMARTY ...
+I've tested it ...
+What a wonderful well-thinked product !!!
+I am a fan of XML/XSLT, but with server-side script ; it's not "easy" to
+build something strong.
+But with smarty ; it's wonderful to separate the look from the code ... and
+such easy ...
+I've tested others templates system, no-one is better ...
+I can't find my words in english to describe how many this product is
+WELL-THINKED, and such good ...
+
+it's GREAT GREAT GREAT !
+And will use it for ever ...
+
+thanx A LOT for your good work !!!
+you'll must have a "medal of honnor" for this product !"
+
+			-- Marc Lentz
